Refactoring: Split threads in seperate files
This splits UDPThread and CANThread into seperate
files while introducing a new Timer and ConnectionThread
class to make the code more reusable.

Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,13 @@ ADD_DEFINITIONS(
 )
 
 add_executable(cannelloni cannelloni.cpp)
-add_library(addsources STATIC connection.cpp framebuffer.cpp)
+add_library(addsources STATIC
+            connection.cpp
+            framebuffer.cpp
+            thread.cpp
+            timer.cpp
+            udpthread.cpp
+            canthread.cpp)
 set_target_properties(addsources PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(cannelloni addsources pthread)
 
