Introduce SCTPThread as an alternative transport
cannelloni now supports connections using the SCTP protocol.
This means that frame loss is detected and lost packets are
retransmitted.
Furthermore all packets arrive inside the remote instance in the order
they have been sent.
The use of SCTP is advised in (large) networks where packet loss
and reordering is likely (firewalls).

SCTPThread implements both server and client. Simulatenous open
is currently not possible but could also be implemented.

In the future, SOCK_SEQPACKET may be used instead of SOCK_STREAM.

Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,9 @@ add_library(addsources STATIC
             thread.cpp
             timer.cpp
             udpthread.cpp
-            canthread.cpp)
+            canthread.cpp
+            sctpthread.cpp)
 set_target_properties(addsources PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
-target_link_libraries(cannelloni addsources pthread)
+target_link_libraries(cannelloni addsources pthread sctp)
 
 install(TARGETS cannelloni DESTINATION bin)
