Make sctp optional / check for sctp includes/lib
If lksctp-tools are not present, cannelloni will be build
without sctp support.
This can also be achieved by setting SCTP_SUPPORT to OFF like

  cmake CMakeLists.txt -DSCTP_SUPPORT=OFF

Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,28 @@
 cmake_minimum_required(VERSION 2.6)
 project(cannelloni)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
+
+
+
 ADD_DEFINITIONS(
     -std=c++11
 )
+
+# Options
+option(SCTP_SUPPORT "SCTP_SUPPORT" ON)
+
+if(SCTP_SUPPORT)
+  include(FindSCTP)
+else(SCTP_SUPPORT)
+  message(STATUS "Building cannelloni without SCTP support (SCTP_SUPPORT=OFF)")
+endif(SCTP_SUPPORT)
+
+if(NOT SCTP_FOUND AND SCTP_SUPPORT)
+  set(SCTP_SUPPORT OFF)
+  message(STATUS "SCTP not found. cannelloni will be build without SCTP support.")
+  message(STATUS "Install lksctp-tools for SCTP.")
+endif(NOT SCTP_FOUND AND SCTP_SUPPORT)
 
 find_file(LINUX_VERSION_H "linux/version.h")
 if(LINUX_VERSION_H)
@@ -18,6 +37,11 @@ if(LINUX_VERSION_H)
   endif()
 endif()
 
+CONFIGURE_FILE(
+  ${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/config.h
+)
+
 add_executable(cannelloni cannelloni.cpp)
 add_library(addsources STATIC
             connection.cpp
@@ -25,9 +49,13 @@ add_library(addsources STATIC
             thread.cpp
             timer.cpp
             udpthread.cpp
-            canthread.cpp
-            sctpthread.cpp)
+            canthread.cpp)
+if(SCTP_SUPPORT)
+    add_library(sctpthread STATIC sctpthread.cpp)
+    target_link_libraries(sctpthread addsources sctp)
+    target_link_libraries(addsources sctpthread)
+endif(SCTP_SUPPORT)
 set_target_properties(addsources PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
-target_link_libraries(cannelloni addsources pthread sctp)
+target_link_libraries(cannelloni addsources pthread)
 
 install(TARGETS cannelloni DESTINATION bin)
