Add -Wall switch and fix all warnings
Signed-off-by: Remigiusz Kołłątaj <remigiusz.kollataj@mobica.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
 # Options
 option(SCTP_SUPPORT "SCTP_SUPPORT" ON)
 
+set(CMAKE_CXX_FLAGS -Wall)
+
 if(SCTP_SUPPORT)
   include(FindSCTP)
 else(SCTP_SUPPORT)
