--- a/.github/workflows/nix-test.yml
+++ b/.github/workflows/nix-test.yml
@@ -11,4 +11,4 @@ jobs:
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
     - run: nix build
-    - run: nix flake check
+    - run: nix flake check --print-build-logs
